--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://fan0703.github.io/react-project-4",
+  "homepage": "https://fan0703.github.io/react-project-4",
   "name": "news-search",
   "version": "0.1.0",
   "private": true,
